--- a/about.html
+++ b/about.html
@@ -14,6 +14,17 @@
     <link rel="stylesheet" href="./style/globalStyles.css">
     <link rel="stylesheet" href="./style/components.css">
     <link rel="stylesheet" href="./style/about.css">
+    <!-- Google Analytics 4 -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8PM2HHH982"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-8PM2HHH982');
+    </script>
+
 </head>
 
 <body>
